# vowpal_wabbit

./: .gitignore  CMakeLists.txt
demo/flatbuffer_input_data/: CMakeLists.txt  README.md  convert_to_fb.h  convert_to_fb.py  create_fb_data.cc  create_fb_data.py  data.txt
demo/flatbuffer_input_data/builtin_prefix/: create_fb_data.cc  create_fb_data.py  read_fb_data.cc  read_fb_data.py
demo/flatbuffer_input_data/external_prefix/: create_fb_data.cc  read_fb_data.cc
demo/flatbuffer_input_data/integrated_fb_prefix/: CMakeLists.txt  create_fb_data.cc  create_fb_data.py  read_fb_data.cc  read_fb_data.py
demo/flatbuffer_input_data/one_file/: create_fb_data.py
demo/flatbuffer_input_data/schema/: example.fbs
explore/: explore.h  explore_internal.h
test/: RunTests
test/benchmarks/: CMakeLists.txt  input_formats_benchmarks.cc
test/train-sets/: 0001.fb  cats.dsjson  cats.json  cb_eval.fb  ccb.fb  multiclass.fb  multilabel.fb  rcv1_raw_cb_small.fb  wiki256_no_label.fb
test/train-sets/ref/: cats-predict-dsjson.stderr  cats-predict-json.stderr  cats-train-json.stderr  cs_ldf_fb.stderr  rcv1_raw_cb_small_fb.stderr  wiki256_no_label_fb.stderr
test/unit_test/: CMakeLists.txt  cats_user_provided_pdf.cc  dsjson_parser_test.cc  explore_test.cc  flatbuffer_parser_test.cc  input_formats_benchmarks.cc  json_parser_test.cc  test_common.cc  unit_test.vcxproj  unit_test.vcxproj.filters
utl/flatbuffer/: CMakeLists.txt  txt_to_flat.cc  vw_to_flat.cc  vw_to_flat.h
vowpalwabbit/: cats_pdf.cc  cb_explore_pdf.cc  example.cc  example.h  global_data.cc  global_data.h  parse_example_json.h  parser.cc  pmf_to_pdf.cc  sample_pdf.cc
vowpalwabbit/parser/flatbuffer/: parse_example_flatbuffer.cc  parse_example_flatbuffer.h  parse_label.cc
vowpalwabbit/parser/flatbuffer/schema/: example.fbs
